Fixed spacing issues in services module.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,6 +100,7 @@ ul {
   text-align: center;
   height: auto;
   padding: 0;
+  padding-bottom: 10px;
   background-color: #c8e9d7;
   color: black;
   margin-top: 4px;
@@ -128,6 +129,7 @@ ul {
 .pending-item {
   text-align: center;
   padding: 0;
+  padding-bottom: 10px;
   height: auto;
   background-color: white;
   margin-top: 10px;
